--- a/Pokedex/PokemonSelected/PokemonSelected/pokemonSelected.storyboard
+++ b/Pokedex/PokemonSelected/PokemonSelected/pokemonSelected.storyboard
@@ -68,7 +68,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="o4R-Ro-HrG">
-                                        <rect key="frame" x="10" y="113" width="370" height="216"/>
+                                        <rect key="frame" x="0.0" y="113" width="390" height="216"/>
                                         <color key="backgroundColor" red="0.37258751130000001" green="0.67752717129999995" blue="0.98318797349999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vuz-DW-Z1o">
                                             <size key="itemSize" width="128" height="128"/>
@@ -78,12 +78,43 @@
                                         </collectionViewFlowLayout>
                                         <cells/>
                                     </collectionView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CLD-AA-hae">
+                                        <rect key="frame" x="138" y="334" width="114" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="36" id="IF3-BZ-f8p"/>
+                                            <constraint firstAttribute="width" constant="114" id="Q5S-dy-0kS"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Habilidades"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UgV-Xg-l2o">
+                                        <rect key="frame" x="10" y="334" width="114" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="114" id="F4q-dR-04Q"/>
+                                            <constraint firstAttribute="height" constant="36" id="wf9-41-LLa"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Sobre"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6kM-yo-ggq">
+                                        <rect key="frame" x="266" y="334" width="114" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="114" id="Jaw-fU-ZhC"/>
+                                            <constraint firstAttribute="height" constant="36" id="vcz-Tr-WlP"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Atributos"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="o4R-Ro-HrG" secondAttribute="trailing" constant="10" id="7To-p7-Qxt"/>
+                                    <constraint firstItem="CLD-AA-hae" firstAttribute="top" secondItem="o4R-Ro-HrG" secondAttribute="bottom" constant="5" id="0qM-C2-hyd"/>
+                                    <constraint firstAttribute="trailing" secondItem="o4R-Ro-HrG" secondAttribute="trailing" id="7To-p7-Qxt"/>
                                     <constraint firstItem="pOP-O8-6Cs" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="66" id="7Wg-Um-BXN"/>
-                                    <constraint firstItem="o4R-Ro-HrG" firstAttribute="leading" secondItem="CJ4-9Y-qVh" secondAttribute="leading" constant="10" id="ING-34-K8e"/>
+                                    <constraint firstItem="o4R-Ro-HrG" firstAttribute="leading" secondItem="CJ4-9Y-qVh" secondAttribute="leading" id="ING-34-K8e"/>
                                     <constraint firstAttribute="height" constant="400" id="JFq-HE-9ft" customClass="NSLayoutHelper" customModule="LayoutHelper">
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
@@ -98,7 +129,14 @@
                                         </userDefinedRuntimeAttributes>
                                     </constraint>
                                     <constraint firstAttribute="trailing" secondItem="pOP-O8-6Cs" secondAttribute="trailing" constant="80" id="Qs8-Ox-kFE"/>
+                                    <constraint firstItem="UgV-Xg-l2o" firstAttribute="leading" secondItem="CJ4-9Y-qVh" secondAttribute="leading" constant="10" id="Ugm-13-Lfy"/>
+                                    <constraint firstItem="6kM-yo-ggq" firstAttribute="top" secondItem="o4R-Ro-HrG" secondAttribute="bottom" constant="5" id="bca-7t-UBX"/>
+                                    <constraint firstItem="UgV-Xg-l2o" firstAttribute="firstBaseline" secondItem="CLD-AA-hae" secondAttribute="firstBaseline" id="fvA-LP-lnR"/>
+                                    <constraint firstItem="UgV-Xg-l2o" firstAttribute="top" secondItem="o4R-Ro-HrG" secondAttribute="bottom" constant="5" id="gRY-WG-gix"/>
+                                    <constraint firstItem="CLD-AA-hae" firstAttribute="centerX" secondItem="CJ4-9Y-qVh" secondAttribute="centerX" id="j1A-kZ-oYr"/>
                                     <constraint firstAttribute="bottom" secondItem="o4R-Ro-HrG" secondAttribute="bottom" constant="71" id="qCV-D0-ssd"/>
+                                    <constraint firstItem="6kM-yo-ggq" firstAttribute="centerY" secondItem="CLD-AA-hae" secondAttribute="centerY" id="qh3-6q-xrQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="6kM-yo-ggq" secondAttribute="trailing" constant="10" id="tVu-1g-jV0"/>
                                     <constraint firstItem="bKh-Ad-1ue" firstAttribute="leading" secondItem="CJ4-9Y-qVh" secondAttribute="leading" constant="80" id="vpe-Gq-0vX"/>
                                     <constraint firstItem="o4R-Ro-HrG" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="113" id="whk-9e-KyU"/>
                                     <constraint firstItem="bKh-Ad-1ue" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="66" id="yFy-5d-5z0"/>
@@ -127,7 +165,7 @@
                                 <buttonConfiguration key="configuration" style="plain" image="evaluation-empty-star-evaluation-infographic-icon-with-png-355165-removebg-preview 1"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nº 001" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GiE-bE-6Q3">
-                                <rect key="frame" x="165.66666666666666" y="178" width="59" height="28"/>
+                                <rect key="frame" x="165.66666666666666" y="178" width="58.666666666666657" height="28"/>
                                 <fontDescription key="fontDescription" name="KohinoorDevanagari-Regular" family="Kohinoor Devanagari" pointSize="20"/>
                                 <color key="textColor" red="0.19200724418964205" green="0.19337628191352912" blue="0.19748339508519031" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -189,6 +227,9 @@
                     </view>
                     <connections>
                         <outlet property="TelaBottomView" destination="CJ4-9Y-qVh" id="d2C-NZ-7dQ"/>
+                        <outlet property="abilitiesButton" destination="CLD-AA-hae" id="kBU-el-dhG"/>
+                        <outlet property="aboutButton" destination="UgV-Xg-l2o" id="01o-x4-Q9c"/>
+                        <outlet property="attributesButton" destination="6kM-yo-ggq" id="MmG-ki-DRw"/>
                         <outlet property="infoCollectionView" destination="o4R-Ro-HrG" id="Tnr-Ky-Yfn"/>
                         <outlet property="telaTopView" destination="K7y-wS-Z1d" id="U7x-M3-GD8"/>
                     </connections>
