--- a/Pokedex/PokemonSelected/PokemonSelected/pokemonSelected.storyboard
+++ b/Pokedex/PokemonSelected/PokemonSelected/pokemonSelected.storyboard
@@ -12,13 +12,22 @@
         <!--Pokemon Selected Vc-->
         <scene sceneID="FSK-3g-4HI">
             <objects>
-                <viewController id="EfK-HS-OBD" customClass="PokemonSelectedVc" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="pokemon" id="EfK-HS-OBD" customClass="PokemonSelectedVc" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xZc-em-SYW">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K7y-wS-Z1d">
                                 <rect key="frame" x="0.0" y="0.0" width="390" height="600"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bulbasaur" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxD-ml-ytI">
+                                        <rect key="frame" x="10" y="134" width="370" height="49"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="35"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="600" id="Ins-fi-N1W" customClass="NSLayoutHelper" customModule="LayoutHelper">
@@ -36,6 +45,18 @@
                                     </constraint>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWG-dW-4Xd">
+                                <rect key="frame" x="30" y="67" width="40" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="R3l-lv-sJ4"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system"/>
+                                <connections>
+                                    <action selector="backButton:" destination="EfK-HS-OBD" eventType="touchUpInside" id="wCu-JH-w7O"/>
+                                </connections>
+                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pokebolaFundo" translatesAutoresizingMaskIntoConstraints="NO" id="WgH-X6-wHS">
                                 <rect key="frame" x="0.0" y="167" width="390" height="328"/>
                                 <constraints>
@@ -122,12 +143,6 @@
                                     <constraint firstAttribute="height" constant="235" id="xqL-WY-gjd"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bulbasaur" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxD-ml-ytI">
-                                <rect key="frame" x="10" y="135" width="370" height="49"/>
-                                <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="35"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="50x-p5-15w">
                                 <rect key="frame" x="294" y="57" width="76" height="46"/>
                                 <constraints>
@@ -148,7 +163,6 @@
                         <viewLayoutGuide key="safeArea" id="Q1J-hB-kOf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="qxD-ml-ytI" firstAttribute="leading" secondItem="Q1J-hB-kOf" secondAttribute="leading" constant="10" id="09T-0J-G8b"/>
                             <constraint firstItem="Q1J-hB-kOf" firstAttribute="trailing" secondItem="IC3-T9-cyx" secondAttribute="trailing" constant="60" id="0Cg-5L-NRs"/>
                             <constraint firstItem="WgH-X6-wHS" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="120" id="1OD-hB-diH" customClass="NSLayoutHelper" customModule="LayoutHelper">
                                 <userDefinedRuntimeAttributes>
@@ -163,6 +177,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </constraint>
+                            <constraint firstItem="bWG-dW-4Xd" firstAttribute="leading" secondItem="Q1J-hB-kOf" secondAttribute="leading" constant="30" id="2CO-we-obg"/>
                             <constraint firstItem="IC3-T9-cyx" firstAttribute="leading" secondItem="Q1J-hB-kOf" secondAttribute="leading" constant="60" id="5fl-QY-XXf"/>
                             <constraint firstItem="WgH-X6-wHS" firstAttribute="leading" secondItem="Q1J-hB-kOf" secondAttribute="leading" id="7wJ-dr-wMY"/>
                             <constraint firstItem="GiE-bE-6Q3" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="131" id="EfL-uK-jiY" customClass="NSLayoutHelper" customModule="LayoutHelper">
@@ -180,19 +195,6 @@
                             </constraint>
                             <constraint firstItem="K7y-wS-Z1d" firstAttribute="leading" secondItem="xZc-em-SYW" secondAttribute="leading" id="F0d-ON-Id9"/>
                             <constraint firstItem="K7y-wS-Z1d" firstAttribute="top" secondItem="xZc-em-SYW" secondAttribute="top" id="H1r-MM-5US"/>
-                            <constraint firstItem="qxD-ml-ytI" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="88" id="IIH-0s-DaP" customClass="NSLayoutHelper" customModule="LayoutHelper">
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
-                                        <real key="value" value="188"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE">
-                                        <real key="value" value="66"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE2G">
-                                        <real key="value" value="66"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </constraint>
                             <constraint firstItem="IC3-T9-cyx" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="215" id="N8I-Io-lgn" customClass="NSLayoutHelper" customModule="LayoutHelper">
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE">
@@ -215,11 +217,11 @@
                             <constraint firstItem="CJ4-9Y-qVh" firstAttribute="leading" secondItem="xZc-em-SYW" secondAttribute="leading" id="PFz-mA-8gV"/>
                             <constraint firstItem="WgH-X6-wHS" firstAttribute="trailing" secondItem="Q1J-hB-kOf" secondAttribute="trailing" id="TXd-2J-d0L"/>
                             <constraint firstAttribute="trailing" secondItem="CJ4-9Y-qVh" secondAttribute="trailing" id="WMy-qE-e7E"/>
+                            <constraint firstItem="bWG-dW-4Xd" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="20" id="Wwd-Wh-Rir"/>
                             <constraint firstItem="GiE-bE-6Q3" firstAttribute="centerX" secondItem="xZc-em-SYW" secondAttribute="centerX" id="dDp-a0-0jn"/>
                             <constraint firstItem="Q1J-hB-kOf" firstAttribute="trailing" secondItem="50x-p5-15w" secondAttribute="trailing" constant="20" id="mvQ-UV-9ak"/>
                             <constraint firstItem="50x-p5-15w" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="10" id="nyy-4G-VIc"/>
                             <constraint firstAttribute="bottom" secondItem="CJ4-9Y-qVh" secondAttribute="bottom" id="tin-pz-f6J"/>
-                            <constraint firstItem="Q1J-hB-kOf" firstAttribute="trailing" secondItem="qxD-ml-ytI" secondAttribute="trailing" constant="10" id="xk5-zf-av8"/>
                             <constraint firstAttribute="trailing" secondItem="K7y-wS-Z1d" secondAttribute="trailing" id="zGu-ce-aFU"/>
                         </constraints>
                     </view>
@@ -236,6 +238,7 @@
     </scenes>
     <resources>
         <image name="bubasauro" width="475" height="475"/>
+        <image name="chevron.backward" catalog="system" width="97" height="128"/>
         <image name="evaluation-empty-star-evaluation-infographic-icon-with-png-355165-removebg-preview 1" width="52" height="32"/>
         <image name="pokebolaFundo" width="427" height="411"/>
         <systemColor name="systemBackgroundColor">
