--- a/Pokedex/Favorites/Favorites.storyboard
+++ b/Pokedex/Favorites/Favorites.storyboard
@@ -18,10 +18,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QeL-7X-GbG">
-                                <rect key="frame" x="0.0" y="118" width="414" height="744"/>
+                                <rect key="frame" x="0.0" y="118" width="414" height="768"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oLV-g2-M2A">
-                                        <rect key="frame" x="0.0" y="15" width="414" height="729"/>
+                                        <rect key="frame" x="0.0" y="15" width="414" height="663"/>
                                         <color key="backgroundColor" red="0.54901963470000004" green="0.83137255909999996" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8Yg-bf-5nG">
                                             <size key="itemSize" width="128" height="128"/>
@@ -37,7 +37,7 @@
                                     <constraint firstItem="oLV-g2-M2A" firstAttribute="leading" secondItem="QeL-7X-GbG" secondAttribute="leading" id="QSE-uo-8A4"/>
                                     <constraint firstItem="oLV-g2-M2A" firstAttribute="top" secondItem="QeL-7X-GbG" secondAttribute="top" constant="15" id="b3q-v3-Hgj"/>
                                     <constraint firstAttribute="trailing" secondItem="oLV-g2-M2A" secondAttribute="trailing" id="h90-S2-xT3"/>
-                                    <constraint firstAttribute="bottom" secondItem="oLV-g2-M2A" secondAttribute="bottom" id="nao-UZ-z0V"/>
+                                    <constraint firstAttribute="bottom" secondItem="oLV-g2-M2A" secondAttribute="bottom" constant="90" id="nao-UZ-z0V"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favoritos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zpg-8n-6IZ">
@@ -52,7 +52,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemCyanColor"/>
                         <constraints>
-                            <constraint firstItem="QeL-7X-GbG" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="QOJ-7d-zPA"/>
+                            <constraint firstAttribute="bottom" secondItem="QeL-7X-GbG" secondAttribute="bottom" constant="10" id="4Hy-HR-cxz"/>
                             <constraint firstItem="QeL-7X-GbG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ulr-lV-KsG"/>
                             <constraint firstItem="zpg-8n-6IZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="dZG-oi-JDl"/>
                             <constraint firstItem="zpg-8n-6IZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="itc-dF-ye6"/>
